<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.overplexer.audiovrlink.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/forward"
        android:layout_centerVertical="true"
        android:text="@string/forward" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/backward"
        android:text="@string/backward"
        android:layout_below="@+id/forward"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notConnected"
        android:id="@+id/connectionStatus" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dataStream"
        android:text=""
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/connectionStatus"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reconnect"
        android:id="@+id/reconnect"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="reconnect" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newConnection"
        android:id="@+id/newConnection"
        android:layout_alignLeft="@+id/reconnect"
        android:layout_alignStart="@+id/reconnect"
        android:layout_below="@id/reconnect"
        android:onClick="newConnect"/>


</RelativeLayout>
